add tests
- add tests
- add code coverage by jacococ
- update README